--- a/biografia.html
+++ b/biografia.html
@@ -110,7 +110,7 @@
     <p>
       Atualmente, estou focado em aprender e aplicar tecnologias avançadas e linguagens de programação modernas, visando criar soluções inovadoras no futuro. Busco oportunidades para crescer como profissional e contribuir com projetos desafiadores no campo da tecnologia.
     </p>
-    <a href="Tela inical.html" class="btn-voltar">← Voltar à Tela Inicial</a>
+    <a href="index.html" class="btn-voltar">← Voltar à Tela Inicial</a>
   </main>
 
   <footer>
